--- a/style.css
+++ b/style.css
@@ -223,13 +223,17 @@
 @media only screen and (min-width:768px) {
 .navbar{
     overflow: hidden;
-    background-color: black;
+    background-image: linear-gradient(rgba(0,0,0,0.65),rgba(0,0,0,0.65));
     position: fixed;
     top: 0;
     left: 0;
     border-radius: 50px;
     width: 100%;
-    height: 9vh;
+    height: 6vh;
+    z-index: 100;
+    -webkit-backdrop-filter: blur(8px);
+    backdrop-filter: blur(8px)
+    
     
 }
 .home-class{
